Fix overflow issue when preview image is enabled

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --text-secondary: #475569;
   --text-dark: #202020;
   --bg-welcome: #eee;
-  --bg-hero: linear-gradient(to top, #fff, #eee 80%, #fff);
+  --bg-hero-input: linear-gradient(to top, #fff, #ddd 80%, #fff);
   --image-radius: 1rem;
 }
 
